--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@ html, body {
   display: flex;
   justify-content: center;
   align-items: flex-end;
+scroll-behavior: smooth;
+	overflow-y: hidden;
 }
 
 .container {
