--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ html, body {
     left: 50%;
     top: 50%;
     bottom: 0;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%) scale(0.5);
 }
 
 .cat-head{
