--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ html, body {
     left: 50%;
     top: 50%;
     bottom: 0;
-    transform: translate(-50%, -50%) scale(0.5);
+    transform: translate(-50%, -50%);
 }
 
 .cat{
