--- a/style.css
+++ b/style.css
@@ -13,8 +13,7 @@ html, body {
 }
 
 .main{
-    position: absolute;
-	left: 50%;
+position: fixed;
     bottom: 0;
     transform: translate(-50%, -50%);
 }
